--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
     }
 
     #slideshow img {
-      position: absolute;
-      width: 90vw;
-      height: 80svh;
-      object-fit: contain;
-      opacity: 0;
-      transition: opacity 1.5s ease-in-out;
-      border-radius: 16px;
-      box-shadow: 0 0 25px rgba(255, 64, 129, 0.5);
-    }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90vw;
+  height: 80svh;
+  object-fit: contain;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+  border-radius: 16px;
+  box-shadow: 0 0 25px rgba(255, 64, 129, 0.5);
+}
 
     #message {
       position: absolute;
@@ -77,3 +80,4 @@
   <div id="slideshow">
     <img src="photos/1.jpg" alt="">
     <img src="photos/2.jpg" alt=
+
